--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="question_owner_color">#1a1a1a</color>
+    <color name="question_time_color">#262626</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
